Resolve RequirementContext as early as possible